--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,30 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.errmsg {
+  color: red;
+}
+
+.header {
+  background-color: #edf3ff;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+app-check {
+  height: 20px;
+  width: 20px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -32,6 +52,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
